--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -646,6 +646,10 @@ service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
     group radio cache inet misc audio sdcard_r sdcard_rw diag log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
+on property:dev.bootcomplete=1
+    setprop sys.io.scheduler "bfq"
+    restart ril-daemon
+
 service charger /sbin/chargeonlymode
     class charger
     group system graphics
