--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -649,6 +649,10 @@ service ril-daemon2 /vendor/bin/hw/rild -c 2
     group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2901 log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
+on property:dev.bootcomplete=1
+    setprop sys.io.scheduler "bfq"
+    restart ril-daemon
+
 service charger /sbin/chargeonlymode
     class charger
     group system graphics
